feature: add Counter component

--- a/src/components/shared/CvLinkItem/CvLinkItem.module.scss
+++ b/src/components/shared/CvLinkItem/CvLinkItem.module.scss
@@ -25,6 +25,10 @@
 		translate: -24px 24px;
 	}
 
+	img {
+		transition: 0.2s ease-in;
+	}
+
 	&::after {
 		@include ui-flex-container(none);
 	}
@@ -35,6 +39,10 @@
 
 		svg {
 			translate: 100% -100%;
+		}
+
+		img {
+			scale: 1.24;
 		}
 	}
 }
