--- a/src/components/ui/blocks/Button/Button.module.scss
+++ b/src/components/ui/blocks/Button/Button.module.scss
@@ -216,29 +216,29 @@
 		padding: 0 $ui-step * $padding;
 		gap: $ui-step * $gap;
 
-			font-size: $font-size;
-			line-height: $line-height;
+		font-size: $font-size;
+		line-height: $line-height;
 	}
 }
 
 .size-xsm {
-	@include ui-size-button(7, 2, $ui-rounded--8, 0.5, 13px, 1.3847em);
+	@include ui-size-button(7, 2, $ui-rounded--8, 0.5, 13px, 18px);
 }
 
 .size-sm {
-	@include ui-size-button(11, 3, $ui-rounded--12, 1, 15px, 1.333334em);
+	@include ui-size-button(11, 3, $ui-rounded--12, 1, 15px, 20px);
 }
 
 .size-md {
-	@include ui-size-button(14, 4, $ui-rounded--16, 1.5, 17px, 1.4118em);
+	@include ui-size-button(14, 4, $ui-rounded--16, 1.5, 17px, 24px);
 }
 
 .size-lg {
-	@include ui-size-button(16, 5, $ui-rounded--16, 2, 20px, 1.4em);
+	@include ui-size-button(16, 5, $ui-rounded--16, 2, 20px, 28px);
 }
 
 .size-xlg {
-	@include ui-size-button(18, 6, $ui-rounded--20, 3, 24px, 1.333334em);
+	@include ui-size-button(18, 6, $ui-rounded--20, 3, 24px, 32px);
 }
 
 // corners
