--- a/src/components/shared/CvLinkItem/CvLinkItem.module.scss
+++ b/src/components/shared/CvLinkItem/CvLinkItem.module.scss
@@ -34,7 +34,7 @@
 	}
 
 	&:hover {
-		scale: 0.96;
+		scale: 0.98;
 		border-radius: $ui-rounded--44;
 
 		svg {
@@ -42,8 +42,12 @@
 		}
 
 		img {
-			scale: 1.24;
+			scale: 1.12;
 		}
+	}
+
+	&:active {
+		scale: 0.96;
 	}
 }
 
