refactor: update all

--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -15,7 +15,7 @@
 		border-radius: $ui-rounded--24;
 		background: var(--header-alpha);
 		backdrop-filter: blur(44px);
-		box-shadow: inset 0 0 0 1px var(--separator);
+		box-shadow: 0 0 0 1px var(--separator);
 		padding: 0 min($ui-step * 9, calc($ui-outer-padding + $ui-inner-padding));
 		gap: $ui-spacing;
 
