--- a/src/components/shared/PortfolioItem/PortfolioItem.module.scss
+++ b/src/components/shared/PortfolioItem/PortfolioItem.module.scss
@@ -7,24 +7,57 @@
 	border-radius: $ui-rounded--24;
 
 	.preview {
-		@include ui-flex-container(flex, center, center);
-
 		position: relative;
-		overflow: hidden;
-		background: var(--background-alpha);
+		color: var(--text-secondary);
 		border-radius: inherit;
+		background: var(--background-alpha);
+		box-shadow: 0 0 0 1px var(--separator);
 
 		aspect-ratio: 133 / 64;
 
-		&::after {
-			content: '';
+		.award {
+			@include ui-size-control(88px, 88px);
+			@include ui-flex-container(flex, center, center);
 
+			position: absolute;
+			bottom: calc($ui-step * 3);
+			right: calc($ui-step * -3);
+			z-index: $ui-index--4;
+			transition: 0.16s ease-in;
+			border-radius: 50%;
+
+			&-placeholder {
+				@include ui-size-control(100%, 100%);
+				@include ui-flex-container(flex, center, center);
+
+				// background-color: var(--background-alpha);
+				// backdrop-filter: blur(20px);
+				border-radius: inherit;
+
+				svg {
+					color: var(--text-primary);
+				}
+			}
+
+			&:hover {
+				scale: 1.16;
+			}
+
+			&:active {
+				scale: 1.08;
+			}
+		}
+
+		.image {
+			@include ui-flex-container(flex, center, center);
 			@include ui-size-control(100%, 100%);
-			@include ui-absolute-center;
 
-			box-shadow: inset 0 0 0 1px var(--separator);
+			overflow: hidden;
 			border-radius: inherit;
-			pointer-events: none;
+
+			img {
+				transition: 0.16s ease-in;
+			}
 		}
 	}
 
@@ -36,7 +69,7 @@
 		padding-bottom: clamp($ui-step * 3, 1.64vmax, $ui-step * 5);
 
 		.project-name {
-			@include ui-text-ellipsis(2);
+			@include ui-text-ellipsis(3);
 		}
 
 		.caption {
@@ -48,6 +81,14 @@
 		padding-right: calc($ui-inner-padding + $ui-outer-padding);
 		padding-left: calc($ui-inner-padding + $ui-outer-padding);
 	}
+}
+
+.link:hover + .preview .image img {
+	scale: 1.16;
+}
+
+.link:active + .preview .image img {
+	scale: 1.08;
 }
 
 .link {
