--- a/src/components/ui/blocks/Tile/Tile.module.scss
+++ b/src/components/ui/blocks/Tile/Tile.module.scss
@@ -8,17 +8,18 @@
 	border-radius: clamp($ui-rounded--24, 3vmax, $ui-rounded--36);
 	overflow: hidden;
 	position: relative;
+	box-shadow: 0 0 0 1px var(--separator);
 
-	&::after {
-		content: '';
+	// &::after {
+	// 	content: '';
 
-		@include ui-size-control(100%, 100%);
-		@include ui-absolute-center;
+	// 	@include ui-size-control(100%, 100%);
+	// 	@include ui-absolute-center;
 
-		box-shadow: inset 0 0 0 1px var(--separator);
-		border-radius: inherit;
-		pointer-events: none;
-	}
+	// 	box-shadow: inset 0 0 0 1px var(--separator);
+	// 	border-radius: inherit;
+	// 	pointer-events: none;
+	// }
 }
 
 .padding {
