--- a/src/views/Portfolio/Portfolio.module.scss
+++ b/src/views/Portfolio/Portfolio.module.scss
@@ -5,3 +5,83 @@
 
 	gap: clamp($ui-step * 3, 1.64vmax, $ui-step * 5);
 }
+
+.preview {
+	@include ui-flex-container(flex, center, center);
+
+	position: relative;
+	color: var(--text-secondary);
+
+	aspect-ratio: 133 / 64;
+
+	img {
+		@include ui-size-control(100%);
+	}
+}
+
+.masonry {
+	@include ui-flex-container(flex);
+
+	gap: $ui-outer-padding;
+	overflow: hidden;
+	border-radius: clamp($ui-rounded--16, 2.4vmax, $ui-rounded--24);
+	margin: $ui-outer-padding;
+
+	&-column {
+		background-clip: padding-box;
+	}
+
+	&-item {
+		@include ui-flex-container(flex, center, center);
+
+		overflow: hidden;
+		border-radius: $ui-rounded--16;
+		position: relative;
+		color: var(--text-secondary);
+		cursor: pointer;
+		transition: 0.12s ease-in;
+
+		img {
+			width: 100%;
+			transition: 0.24s ease-in;
+			border-radius: $ui-rounded--16;
+		}
+
+		// &:hover {
+		// 	img {
+		// 		scale: 1.12;
+		// 	}
+		// }
+
+		// &:active {
+		// 	scale: 0.98;
+		// }
+
+		&:not(:last-child) {
+			margin-bottom: $ui-outer-padding;
+		}
+	}
+
+	.expanded-image-container {
+		@include ui-flex-container(flex, center, center);
+
+		position: fixed;
+		width: 100vw;
+		height: 100dvh;
+
+		z-index: 14;
+		top: 0;
+		left: 0;
+		padding: $ui-outer-padding;
+		border-radius: 0;
+		transition: 0.24s ease-in;
+
+		background-color: var(--overlay);
+		backdrop-filter: blur(32px);
+
+		img {
+			max-height: 100%;
+			width: auto !important;
+		}
+	}
+}
