feature: add ListComponent component

--- a/src/assets/styles/_Reset.scss
+++ b/src/assets/styles/_Reset.scss
@@ -62,9 +62,9 @@ p {
 
 ul,
 ul li {
-	list-style: none;
+	// list-style: none;
+	// list-style-type: none;
 	text-decoration: none;
-	list-style-type: none;
 	margin: 0;
 	padding: 0;
 }
