--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -52,9 +52,9 @@
 		Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
 		'Segoe UI Symbol', 'Noto Color Emoji', Arial, Helvetica, sans-serif;
 
-	font-size: 20px;
+	font-size: clamp(17px, 3.6vmin, 20px);
 	font-weight: normal;
-	line-height: 1.4rem;
+	line-height: 1.4em;
 
 	background: var(--background);
 	color: var(--text-primary);
