--- a/src/components/shared/HardSkillItem/HardSkillItem.module.scss
+++ b/src/components/shared/HardSkillItem/HardSkillItem.module.scss
@@ -1,12 +1,13 @@
 @import 'assets/styles/Variables';
 
 .root {
+	@include ui-size-control($minW: 0);
 	@include ui-flex-container(flex);
-	@include ui-size-control($H: clamp($ui-step * 12, 7.2vmax, $ui-step * 18));
 
 	gap: $ui-sm-gap;
 
 	.image {
+		@include ui-size-control($H: clamp($ui-step * 12, 7.2vmax, $ui-step * 18));
 		@include ui-flex-container(flex, center, center, $shrink: 0);
 
 		aspect-ratio: 1 / 1;
@@ -17,9 +18,11 @@
 	}
 
 	.info {
-		@include ui-display-grid(1fr);
-		@include ui-size-control($minH: 100%);
-		@include ui-flex-container($items: center);
+		@include ui-size-control(
+			$minW: 0,
+			$minH: clamp($ui-step * 12, 7.2vmax, $ui-step * 18)
+		);
+		@include ui-flex-container(flex, center, $flow: column);
 
 		gap: $ui-step;
 	}
