refactor: update meta tags

--- a/src/components/shared/CvLinkItem/CvLinkItem.module.scss
+++ b/src/components/shared/CvLinkItem/CvLinkItem.module.scss
@@ -40,7 +40,7 @@
 
 	&:hover {
 		// scale: 0.98;
-		border-radius: $ui-rounded--44;
+		// border-radius: $ui-rounded--44;
 
 		.icon {
 			translate: 100% -100%;
