--- a/src/components/shared/CvLinkItem/CvLinkItem.module.scss
+++ b/src/components/shared/CvLinkItem/CvLinkItem.module.scss
@@ -51,10 +51,10 @@
 		}
 	}
 
-	&:active {
-		// 	scale: 0.96;
-		border-radius: $ui-rounded--56;
-	}
+	// &:active {
+	// 	scale: 0.96;
+	// border-radius: $ui-rounded--56;
+	// }
 }
 
 .vk {
