refactor: update all

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,8 +2,11 @@
 
 :root {
 	--accent-brand-color: var(--accent-blue-color);
+	--accent-brand-color--hover: hsl(241 100% 68%);
 	--accent-positive-color: var(--lime-color);
+	--accent-positive-color--hover: hsl(132 70% 58%);
 	--accent-negative-color: var(--deep-coral-color);
+	--accent-negative-color--hover: hsl(0 100% 68%);
 
 	--deep-coral-color: hsl(0 100% 62%);
 	--neon-carrot-color: hsl(28 100% 62%);
@@ -28,48 +31,48 @@
 
 [data-theme='light'] {
 	--background: hsl(241, 10%, 96%);
-	--background-alpha: hsl(241, 44%, 20%, 5%);
+	--background--alpha: hsl(241, 44%, 20%, 5%);
 	--field-background: hsl(0, 0%, 100%);
 
 	--overlay: hsl(241, 10%, 10%, 72%);
 
-	--header-alpha: hsl(0, 0%, 100%, 64%);
+	--header--alpha: hsl(0, 0%, 100%, 64%);
 
 	--button-secondary: hsl(241, 44%, 20%, 5%);
-	--button-secondary-hover: hsl(241, 44%, 20%, 10%);
+	--button-secondary--hover: hsl(241, 44%, 20%, 10%);
 	--button-contrast: hsl(241, 10%, 10%);
-	--button-contrast-hover: hsl(241, 10%, 16%);
+	--button-contrast--hover: hsl(241, 10%, 16%);
 
 	--separator: hsl(241, 10%, 88%);
-	--separator-alpha: hsl(241, 44%, 20%, 15%);
+	--separator--alpha: hsl(241, 44%, 20%, 15%);
 
 	--text-primary: hsl(241, 10%, 10%);
 	--text-secondary: hsl(241, 10%, 64%);
 	--text-contrast: hsl(0, 0%, 100%);
-	--text-contrast-themed: hsl(0, 0%, 100%);
+	--text-contrast--themed: hsl(0, 0%, 100%);
 }
 
 [data-theme='dark'] {
 	--background: hsl(241, 10%, 10%);
-	--background-alpha: hsl(241, 10%, 1%, 30%);
+	--background--alpha: hsl(241, 10%, 1%, 30%);
 	--field-background: hsl(241, 10%, 14%);
 
 	--overlay: hsl(241, 10%, 10%, 72%);
 
-	--header-alpha: hsl(241, 10%, 14%, 64%);
+	--header--alpha: hsl(241, 10%, 14%, 64%);
 
 	--button-secondary: hsl(241, 10%, 96%, 10%);
-	--button-secondary-hover: hsl(241, 10%, 96%, 16%);
+	--button-secondary--hover: hsl(241, 10%, 96%, 16%);
 	--button-contrast: hsl(241, 10%, 96%);
-	--button-contrast-hover: hsl(241, 10%, 90%);
+	--button-contrast--hover: hsl(241, 10%, 90%);
 
 	--separator: hsl(241, 10%, 28%);
-	--separator-alpha: hsl(241, 80%, 88%, 19%);
+	--separator--alpha: hsl(241, 80%, 88%, 19%);
 
 	--text-primary: hsl(241, 19%, 94%);
 	--text-secondary: hsl(241, 10%, 64%);
 	--text-contrast: hsl(0, 0%, 100%);
-	--text-contrast-themed: hsl(241, 10%, 10%);
+	--text-contrast--themed: hsl(241, 10%, 10%);
 }
 
 :root {
