--- a/src/components/ui/blocks/Button/Button.module.scss
+++ b/src/components/ui/blocks/Button/Button.module.scss
@@ -7,7 +7,9 @@
 	position: relative;
 	overflow: hidden;
 	transition: 0.12s ease-in;
-	outline: 0px solid var(--button-secondary);
+
+	outline: 0px solid var(--separator);
+	outline-offset: 0px;
 
 	filter: blur(0px);
 
@@ -46,7 +48,8 @@
 	}
 
 	&:focus-visible {
-		outline: 3px solid var(--button-secondary);
+		outline: 2px solid var(--separator--alpha);
+		outline-offset: 2px;
 	}
 }
 
@@ -65,115 +68,106 @@
 
 // primary
 
-@mixin ui-primary-appearance-button($color, $background) {
+@mixin ui-primary-appearance-button($color, $background, $hover) {
 	color: $color;
 	background: $background;
-	outline-color: rgba($background, $Alpha12);
 
 	&:hover {
-		background: lighten($background, $Alpha4);
+		background: $hover;
 	}
 }
 
 .mode-primary.accent {
-	@include ui-primary-appearance-button(var(--text-contrast), $AccentBlue);
+	@include ui-primary-appearance-button(
+		var(--text-contrast),
+		var(--accent-brand-color),
+		var(--accent-brand-color--hover)
+	);
 }
 
 .mode-primary.positive {
-	@include ui-primary-appearance-button(var(--text-contrast), $Lime);
+	@include ui-primary-appearance-button(
+		var(--text-contrast),
+		var(--accent-positive-color),
+		var(--accent-positive-color--hover)
+	);
 }
 
 .mode-primary.negative {
-	@include ui-primary-appearance-button(var(--text-contrast), $DeepCoral);
+	@include ui-primary-appearance-button(
+		var(--text-contrast),
+		var(--accent-negative-color),
+		var(--accent-negative-color--hover)
+	);
 }
 
 .mode-primary.neutral {
-	color: var(--text-contrast-themed);
-	background: var(--button-contrast);
-
-	&:hover {
-		background: var(--button-contrast-hover);
-	}
+	@include ui-primary-appearance-button(
+		var(--text-contrast--themed),
+		var(--button-contrast),
+		var(--button-contrast--hover)
+	);
 }
 
 // secondary
 
 @mixin ui-secondary-appearance-button($color) {
 	color: $color;
-	background: rgba($color, $Alpha12);
-	outline-color: rgba($color, $Alpha8);
+	background: var(--button-secondary);
 
 	&:hover {
-		background: rgba($color, $Alpha20);
+		background: var(--button-secondary--hover);
 	}
 
 	&:focus-within {
-		box-shadow: inset 0 0 0 1px rgba($color, $Alpha32);
+		box-shadow: inset 0 0 0 1px var(--separator--alpha);
 	}
 }
 
 .mode-secondary.accent {
-	@include ui-secondary-appearance-button($AccentBlue);
+	@include ui-secondary-appearance-button(var(--accent-brand-color));
 }
 
 .mode-secondary.positive {
-	@include ui-secondary-appearance-button($Lime);
+	@include ui-secondary-appearance-button(var(--accent-positive-color));
 }
 
 .mode-secondary.negative {
-	@include ui-secondary-appearance-button($DeepCoral);
+	@include ui-secondary-appearance-button(var(--accent-negative-color));
 }
 
 .mode-secondary.neutral {
-	color: var(--text-primary);
-	background: var(--button-secondary);
-
-	&:hover {
-		background: var(--button-secondary-hover);
-	}
-
-	&:focus-within {
-		box-shadow: inset 0 0 0 1px var(--separator-alpha);
-	}
+	@include ui-secondary-appearance-button(var(--text-primary));
 }
 
 // tertiary
 
 @mixin ui-tertiary-appearance-button($color) {
 	color: $color;
-	outline-color: rgba($color, $Alpha8);
-
-	&:hover {
-		background: rgba($color, $Alpha12);
-	}
-
-	&:focus-within {
-		box-shadow: inset 0 0 0 1px rgba($color, $Alpha32);
-	}
-}
-
-.mode-tertiary.accent {
-	@include ui-tertiary-appearance-button($AccentBlue);
-}
-
-.mode-tertiary.positive {
-	@include ui-tertiary-appearance-button($Lime);
-}
-
-.mode-tertiary.negative {
-	@include ui-tertiary-appearance-button($DeepCoral);
-}
-
-.mode-tertiary.neutral {
-	color: var(--text-primary);
 
 	&:hover {
 		background: var(--button-secondary);
 	}
 
 	&:focus-within {
-		box-shadow: inset 0 0 0 1px var(--separator-alpha);
+		box-shadow: inset 0 0 0 1px var(--separator--alpha);
 	}
+}
+
+.mode-tertiary.accent {
+	@include ui-tertiary-appearance-button(var(--accent-brand-color));
+}
+
+.mode-tertiary.positive {
+	@include ui-tertiary-appearance-button(var(--accent-positive-color));
+}
+
+.mode-tertiary.negative {
+	@include ui-tertiary-appearance-button(var(--accent-negative-color));
+}
+
+.mode-tertiary.neutral {
+	@include ui-tertiary-appearance-button(var(--text-primary));
 }
 
 // outline
@@ -181,28 +175,27 @@
 @mixin ui-outline-appearance-button($color) {
 	color: $color;
 	box-shadow: inset 0 0 0 1px $color;
-	outline-color: rgba($color, $Alpha8);
 
 	&:hover {
-		background: rgba($color, $Alpha8);
+		background: var(--button-secondary);
 	}
 }
 
 .mode-outline.accent {
-	@include ui-outline-appearance-button($AccentBlue);
+	@include ui-outline-appearance-button(var(--accent-brand-color));
 }
 
 .mode-outline.positive {
-	@include ui-outline-appearance-button($Lime);
+	@include ui-outline-appearance-button(var(--accent-positive-color));
 }
 
 .mode-outline.negative {
-	@include ui-outline-appearance-button($DeepCoral);
+	@include ui-outline-appearance-button(var(--accent-negative-color));
 }
 
 .mode-outline.neutral {
 	color: var(--text-primary);
-	box-shadow: inset 0 0 0 1px var(--separator-alpha);
+	box-shadow: inset 0 0 0 1px var(--separator--alpha);
 
 	&:hover {
 		background: var(--button-secondary);
