refactor: update all

--- a/src/components/shared/CvLinkItem/CvLinkItem.module.scss
+++ b/src/components/shared/CvLinkItem/CvLinkItem.module.scss
@@ -17,7 +17,7 @@
 	background-position: 100%;
 
 	box-shadow: none;
-	filter: blur(0px);
+	// filter: blur(0px);
 
 	.link {
 		@include ui-absolute-center;
