--- a/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/ui/navigation/Breadcrumbs/Breadcrumbs.module.scss
@@ -24,7 +24,7 @@
 			);
 
 			transition: 0.08s ease-in;
-			border-radius: $ui-rounded--8;
+			border-radius: $ui-rounded--xsm;
 			z-index: -1;
 		}
 
