--- a/src/assets/styles/_Variables.scss
+++ b/src/assets/styles/_Variables.scss
@@ -6,7 +6,7 @@ $ui-step: 4px;
 $ui-spacing: $ui-step * 5;
 $ui-column-width: 72px;
 
-$ui-inner-padding: clamp($ui-step * 3, 2.72vmax, $ui-step * 9);
+$ui-inner-padding: clamp($ui-step * 2, 2.4vmax, $ui-step * 9);
 $ui-outer-padding: clamp($ui-step * 2, 1.2vmax, $ui-step * 3);
 
 $ui-sm-gap: clamp($ui-step * 2, 1vmax, $ui-spacing);
@@ -26,15 +26,15 @@ $ui-font-secondary: 'VK Sans Display';
 
 // Border Radius ———————————————————————————————————————————————— //
 
-$ui-rounded--8: $ui-step * 2;
-$ui-rounded--12: $ui-step * 3;
-$ui-rounded--16: $ui-step * 4;
-$ui-rounded--20: $ui-step * 5;
-$ui-rounded--24: $ui-step * 6;
-$ui-rounded--36: $ui-step * 9;
-$ui-rounded--44: $ui-step * 11;
-$ui-rounded--56: $ui-step * 14;
-$ui-rounded--64: $ui-step * 16;
+$ui-rounded--xsm: 8px;
+$ui-rounded--sm: 12px;
+$ui-rounded--md: 16px;
+$ui-rounded--l: 20px;
+$ui-rounded--xl: 24px;
+$ui-rounded--2xl: 36px;
+$ui-rounded--3xl: 48px;
+$ui-rounded--4xl: 56px;
+$ui-rounded--5xl: 60px;
 
 // Z-index ———————————————————————————————————————————————— //
 
@@ -49,11 +49,11 @@ $ui-index--24: 24; // for emergencies
 
 // Container ———————————————————————————————————————————————— //
 
-$max-width--widescreen: 1084px; // 1084px
-$max-width--desktop: 992px; // 992px
-$max-width--tablet: 768px; // 768px
-$max-width--mobile: 576px; // 576px
-$max-width--small-mobile: 320px; // 320px
+$ui-max-w--widescreen: 1084px; // 1084px
+$ui-max-w--desktop: 992px; // 992px
+$ui-max-w--tablet: 768px; // 768px
+$ui-max-w--mobile: 576px; // 576px
+$ui-max-w--small-mobile: 320px; // 320px
 
 // Media ———————————————————————————————————————————————— //
 
