--- a/src/assets/styles/_Mixins.scss
+++ b/src/assets/styles/_Mixins.scss
@@ -221,6 +221,20 @@
 	}
 }
 
+@mixin ui-animate-pulse($time: 1.44s) {
+	animation: pulse $time cubic-bezier(0.4, 0, 0.6, 1) infinite;
+
+	@keyframes pulse {
+		0%,
+		100% {
+			opacity: 1;
+		}
+		50% {
+			opacity: 0;
+		}
+	}
+}
+
 @mixin ui-animate-bounce($time: 0.72s) {
 	animation: bounce;
 	animation-duration: $time;
